--- a/docs/components/doc-sections/en/events.html
+++ b/docs/components/doc-sections/en/events.html
@@ -63,16 +63,15 @@
     </p>
 
     <ul>
+        <li> <span class="note mark-el">compiled</span> &ndash; this event is dispatched when an
+            element containing the is fully compiled. </li>
         <li> <span class="note mark-el">data</span> &ndash; this event is dispatched when an
-            element
-            containing the data command is compiled. </li>
+            element containing the data command is compiled. </li>
         <li> <span class="note mark-el">add</span> &ndash; this event is emitted when an element
-            of
-            the e-for command is inserted into the DOM. It works with
+            of the e-for command is inserted into the DOM. It works with
             <a href="connectors.html" class="note mark-el">connectors</a>. </li>
         <li> <span class="note mark-el">empty</span> &ndash; this event is emitted when the
-            array
-            passed in the e-for command is empty. It works with
+            array passed in the e-for command is empty. It works with
             <a href="connectors.html" class="note mark-el">connectors</a>. </li>
         </li>
         <li> <span class="note mark-el">response</span> &ndash; this event is emitted when we
