--- a/docs/components/editor.html
+++ b/docs/components/editor.html
@@ -62,6 +62,7 @@
                 </span>
             </div>
             <div class="alternator">
+                <button on:click="$scope.sMenuClosed = false">Tutorial</button>
                 <button on:click="showResult = false" e-class="{ 'active-side' : !showResult }">Code</button>
                 <button on:click="runCodeShowResult" e-class="{ 'active-side' : showResult }">Result</button>
             </div>
@@ -330,7 +331,8 @@
                     Editor.tabs() + '\n<meta charset="UTF-8">' +
                     Editor.tabs() + '\n<title>Live Editor page<\/title>' +
                     Editor.tabs() + '\n<script src="assets/js/easy.js"><\/script>' +
-                    Editor.tabs() + '\n<style> * html,body { padding:0; } { font-family: Arial, Helvetica, sans-serif; } ' +
+                    Editor.tabs() +
+                    '\n<style> * html,body { padding:0; } { font-family: Arial, Helvetica, sans-serif; } ' +
                     'input, button { border: 1px solid lightgray; border-radius: 3px; } button { padding: 3px 10px; } </style>' +
                     extra +
                     '\n<\/head>' +
@@ -717,13 +719,18 @@
     }
 
     .editor.mobile .alternator>button {
-        width: 100px;
         height: 28px;
         border: 1px solid var(--color-border);
         background-color: var(--color-bg);
         margin: 5px 8px;
         border-radius: 5px;
         color: var(--color-text);
+        max-width: 100px;
+        padding: 0 5%;
+    }
+
+    .editor.mobile .alternator>button:first-child {
+        display: none;
     }
 
     .editor.mobile.show-result .editor-result {
