Exposed some methods for Connectors usage

--- a/docs/components/tutorial/en/structure/page.html
+++ b/docs/components/tutorial/en/structure/page.html
@@ -21,7 +21,7 @@
         <!-- Menu Navegation -->
         <div class="menu nice-scroll hide-it" e-class="{ 'hide-it' : chaptersClosed }">
             <ul>
-                <li> <a i:href="/"> <h3>Introduction</h3> </a> </li>
+                <li> <a i:href="/tutorial"> <h3>Introduction</h3> </a> </li>
                 <li> <a i:href="/tutorial/instance">
                         <h3> Instance </h3>
                     </a>
