--- a/docs/components/editor.html
+++ b/docs/components/editor.html
@@ -356,37 +356,22 @@
                 // Messages
                 var successful = 'Text successfully copied to clipboard';
                 var fail = 'Fail to copy the text, you need to copy it manually';
-
-                function fallbackCopyTextToClipboard(text) {
-                    var textArea = document.createElement("textarea");
-                    textArea.value = text;
-                    // Avoid scrolling to bottom
-                    textArea.style.display = "none";
-
-                    document.body.appendChild(textArea);
-                    textArea.focus();
-                    textArea.select();
-
-                    try {
-                        if (!document.execCommand('copy')) throw ({});
-                        showPopup(successful);
-                    } catch (err) {
-                        showPopup(fail);
-                    }
-
-                    document.body.removeChild(textArea);
-                }
-
-                if (!navigator.clipboard) {
-                    fallbackCopyTextToClipboard(text);
-                    return;
-                }
-
-                navigator.clipboard.writeText(text).then(function () {
+                var textArea = document.createElement("textarea");
+                textArea.value = text;
+                // Avoid scrolling to bottom
+                textArea.style.display = "none";
+                document.body.appendChild(textArea);
+                textArea.focus();
+                textArea.select();
+                
+                try {
+                    if (!document.execCommand('copy')) throw ({});
                     showPopup(successful);
-                }, function (err) {
+                } catch (err) {
                     showPopup(fail);
-                });
+                } finally {
+                    document.body.removeChild(textArea);
+                }          
             }
 
             function showPopup(msg) {
